# DICOM_COMPRESSION_AND_RENDERING_SOFTWARE

dcm_gpegxl_converter/: Cargo.toml  Dioxus.toml  README.md  tailwind.css
dcm_gpegxl_converter/4401646/: 1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000001_17457398197170.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000002_17457398207171.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000003_17457398207172.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000004_17457398217173.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000005_17457398217174.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000006_17457398217175.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000007_17457398227176.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000008_17457398227177.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000009_17457398237178.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000010_17457398237179.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000011_1745739823717a.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000012_1745739824717b.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000013_1745739824717c.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000014_1745739825717d.dcm  1.3.12.2.1107.5.1.4.54663.30000025042707464153100002093_0602_000015_1745739825717e.dcm  (+81 more)
dcm_gpegxl_converter/assets/: main.css  tailwind.css
(+41 files in other folders)
