[package]
name = "dcm_gpegxl_converter"
version = "0.3.0"
authors = ["KiyarashJ <Kj.Programming415@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", default-features = false,features = ["router", "desktop"] }
dioxus-motion = { version = "0.3.3", default-features = false,features = ["transitions", "desktop"] }
chrono = "0.4.42"
dicom = {version = "0.9.0"}
dicom-dictionary-std = "0.9.0"
dicom-dump = "0.9.0"
dicom-json = "0.9.0"
dicom-pixeldata = {version = "0.9.0", features = ["image", "jpegxl"]}
dicom-transfer-syntax-registry = {version = "0.9.0", features = ["jpegxl"]}
rayon = "1.11.0"
tokio = "1.49.0"
dioxus-cli = "0.7.9"
image = "0.25.10"
base64 = "0.22.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dioxus-motion/desktop","dioxus-motion/transitions"]
mobile = ["dioxus/mobile"]
